--- a/_config.yml
+++ b/_config.yml
@@ -17,11 +17,11 @@
 minimal_mistakes_skin    : "dark" #"default" # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
 
 # Site Settings
-locale                   : "en-US"
-title                    : "\"Build a Life, Not a Resume\""
+locale                   : "en-US" #something for languages
+title                    : "Andy Luu - \"Build a Life, Not a Resume\""
 title_separator          : "-"
-name                     : "Your Name"
-description              : "An amazing website."
+name                     : "Andy Luu"
+description              : "My Portfolio."
 url                      : # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : "andyl2020/andyl2020.github.io"# GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
@@ -107,7 +107,7 @@ analytics:
 author:
   name             : "Andy Luu"
   avatar           : "/images/avatar_image.jpeg"# path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "An engineerer interested in how the things works."
+  bio              : "An engineerer interested in how things work."
   location         : "Langley, BC"
   #email            : "andyl@alumni.ubc.ca" #not sure why this is here since there's already an email section below
 
