Minor changes/comments

--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ title_separator          : "-"
 name                     : "Andy Luu"
 description              : "My Portfolio."
 url                      : # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
-baseurl                  : # the subpath of your site, e.g. "/blog"
+baseurl                  : # the subpath of your site, e.g. "/blog" basically whatever you see after andyl2020.github.io/{here}
 repository               : "andyl2020/andyl2020.github.io"# GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
 # breadcrumbs            : false # true, false (default)
@@ -158,7 +158,7 @@ footer:
       # url:
 
 
-# Reading Files
+# Reading Files (exclude means ignore the files in the project as they are irrelevant to the website)
 include:
   - .htaccess
   - _pages
