Renamed gif1 image to temp delete it, added test pages to view layouts, added random numbers to posts to see if google would catch it

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -9,6 +9,12 @@ main:
     url: /projects/
   - title: "404 Test"
     url: /404.html
+  - title: "noLayout"
+    url: /test1/
+  - title: "Single"
+    url: /test2/
+  - title: "Archieve"
+    url: /test3/
 
   # - title: "Quick-Start Guide"
   #   url: https://mmistakes.github.io/minimal-mistakes/docs/quick-start-guide/
